<resources>
    <string name="app_name">BookManager</string>
    <string name="welcome_string">Welcome aboard. Book Manager is a simple Android application that let\'s users the ability to buy and sell books that might be used or unused.</string>
    <string name="bottom_sheet_name">Mukund Madhav</string>
    <string name="bottom_sheet_email">me@mukundmadhav.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="hi">Hi!</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="learn_more">Learn More</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="pass">Password:</string>
    <string name="re_enter">Re-enter:</string>
    <string name="register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="price">Price</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="details_date">April 19, 2019 | Lorem Ispum</string>
    <string name="type_your_message">type your message</string>
</resources>
