<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:gravity="center"
            android:text="@string/hi"
            android:textColor="#fff"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/welcome_string"
            android:textColor="#fff"
            android:layout_marginTop="25dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:padding="10dp"
                android:text="@string/learn_more"
                android:textColor="@color/colorAccent"
                app:cornerRadius="20dp"
                app:rippleColor="@color/colorAccent" />

            <Button
                android:id="@+id/login_signupBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPink"
                android:padding="10dp"
                android:text="@string/sign_up"
                app:cornerRadius="20dp"
                app:rippleColor="#fff" />



        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:background="#fff"
        android:gravity="center"
        android:padding="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/enter_your_credentials"
            android:layout_marginBottom="25dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rededitbut_style"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rededitbut_style"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="AutoFill" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/login_Btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:padding="10dp"
                android:text="@string/login"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#fff" />

            <ProgressBar
                android:id="@+id/login_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/login_Btn"
                app:layout_constraintEnd_toEndOf="@+id/login_Btn"
                app:layout_constraintStart_toStartOf="@+id/login_Btn"
                app:layout_constraintTop_toTopOf="@+id/login_Btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>





</LinearLayout>