<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_gravity="center"
    android:background="#fff"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:gravity="center"
        android:text="@string/enter_your_credentials"
        android:layout_marginBottom="30dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:id="@+id/reg_chooseImg"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/ic_profileadd"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rededitbut_style"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:inputType="text"
        tools:ignore="AutoFill" />

    <EditText
        android:id="@+id/reg_email"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_mail"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rededitbut_style"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email"
        tools:ignore="AutoFill" />

    <EditText
        android:id="@+id/reg_pass"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rededitbut_style"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:hint="@string/pass"
        tools:ignore="AutoFill" />

    <EditText
        android:hint="@string/re_enter"
        android:id="@+id/reg_repass"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rededitbut_style"
        tools:ignore="AutoFill"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reg_regBtn"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/register"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#fff" />

        <ProgressBar
            android:id="@+id/reg_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/reg_regBtn"
            app:layout_constraintEnd_toEndOf="@+id/reg_regBtn"
            app:layout_constraintStart_toStartOf="@+id/reg_regBtn"
            app:layout_constraintTop_toTopOf="@+id/reg_regBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>